# PlayVideo

./: .gitignore  .gitmodules
codes/AVPlayer/: CMakeLists.txt
codes/AVPlayer/CMAKE/: FindSDL2.cmake  FindSDL2_IMAGE.cmake
codes/AVPlayer/resources/: out_bg_yuv420p.yuv  out_nv21.yuv  out_rgb24_900x1016.rgb  out_yuv420p.yuv
codes/AVPlayer/src/: SDLActivity.cpp  SDLActivity.hpp  main.cpp
codes/AVPlayer/src/parser/: RGBImageParser.cpp  YUVImageParser.cpp  YUVImageParser.h  splite_util.cpp  splite_util.h
codes/AVPlayer/src/parser/header/: IImageParser.h  RGBImageParser.h  YUVFileData.h  YUVImageParser.h
files/docs/: FFmpeg_Structure.graffle  FLV_Structure.graffle  H264_Structure.graffle  Pusher.graffle  SDL_AVPlayer.graffle  SDL_Audio_FlowChart.graffle  Socket-C:S.graffle  音视频&流媒体-大纲.xmind
files/video/: out.aac  out.pcm  out_yuv420p.yuv  sample_111.flv  sample_huya.flv
